Fixed search bars / ipad compliance view / left aligned drug view items

--- a/Site/App/css/device/mobile.css
+++ b/Site/App/css/device/mobile.css
@@ -91,3 +91,8 @@ body
 {
     top: 125px;
 }
+.edu-progress-bar-info {
+
+margin-top:0px;
+
+}
